# corgi

./: .env  .flake8  .gitignore  .gitpod.yml  .pnp.js  .pre-commit-config.yaml  .readthedocs.yaml  :x  README.md  bake-book.py  build  corgi  credentials.yml.template  disassemble-book.py  disassemble.py  docker-compose.deploy.build.yml  docker-compose.deploy.images.yml  docker-compose.deploy.labels.yml  docker-compose.deploy.logging.yml  docker-compose.deploy.networks.yml  docker-compose.deploy.settings.yml  docker-compose.deploy.volumes-placement.yml  docker-compose.dev.build.yml  docker-compose.dev.command.yml  docker-compose.dev.depends.yml  docker-compose.dev.env.yml  docker-compose.dev.images.yml  docker-compose.dev.labels.yml  docker-compose.dev.ports.yml  docker-compose.dev.volumes.yml  docker-compose.shared.admin.yml  docker-compose.shared.base-images.yml  docker-compose.shared.depends.yml  docker-compose.shared.env.yml  docker-compose.stack.bootcamp.yml  docker-compose.stack.ci.yml  docker-compose.stack.dev.yml  docker-compose.stack.hotdog.yml  docker-compose.stack.leashed.yml  docker-compose.stack.local.yml  (+19 more)
backend/app/: .ruff.toml  Makefile  manage.py  prestart.sh  pyproject.toml  requirements.txt  setup.cfg  testrail.cfg
backend/app/app/: leashed.py  main.py  middleware.py  xml_utils.py
backend/app/app/api/: __init__.py  utils.py
backend/app/app/auth/: config.py  utils.py
backend/app/app/core/: .env.example  auth.py  config.py  errors.py
backend/app/app/data_models/: models.py
backend/app/app/db/: abl.py  base.py  base_class.py  schema.py  session.py  utils.py
backend/app/app/github/: __init__.py  api.py  client.py  models.py  oauth.py  utils.py
backend/app/app/service/: abl.py  base.py  content_servers.py  docker_hub.py  event.py  github.py  jobs.py  repository.py  status.py  user.py
backend/app/bootcamp/: main.py
backend/app/fixtures/: corgi_playwright.py
backend/app/hotdog/: index.html.template  main.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 06691cbbbcea_add_new_column_worker_version_to_jobs.py  0eee70848f87_add_seed_data_for_git_job_types.py  0fb115ce73c2_add_abl_schema_and_remove_content_server.py  14c3c7f3115e_add_aborted_state_seed_data.py  2837298015bf_added_content_servers_table.py  3e801ba4d7e0_add_approved_book_table_and_child_tables.py  55eae8bd7f1e_initial_schema.py  59dbc5b20d2e_make_content_server_fields_not_nullable.py  603c41a55f80_add_epub_job_type.py  67cf464365a7_add_display_name_to_job_types.py  6a847a3d624a_remove_content_server_and_add_tables_.py  (+17 more)
backend/app/requirements/: dev.txt  main.txt
backend/app/tests/: .ruff.toml  conftest.py  markers.py  utils.py
(+583 files in other folders)
