[tool.poetry]
name = "app"
version = "0.0.0"
description = ""
authors = []
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "0.75.2"
gunicorn = "20.1.0"
psycopg2-binary = "^2.9.2"
tenacity = "6.0.0"
uvicorn = "0.15.0"
SQLAlchemy = "1.4.36"
alembic = "1.7.7"
lxml = "4.9.0"
httpx = "0.23.0"
Authlib = "1.1.0"
itsdangerous = "2.1.2"
cryptography = "^41.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-testrail = "^2.9.0"
importlib-metadata = "^4.8.2"
playwright = "1.22"
pytest-base-url = "^2.0.0"
pytest-mock = "^3.7.0"
python-dotenv = "^0.21.0"
requests = "2.27.1"
pytest-asyncio = "^0.19.0"
pytest-cov = "^4.0.0"
vcrpy = "^4.2.1"
pypdf = "^3.4.1"
bs4 = "^0.0.1"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
