[tool.poetry]
name = "app"
version = "0.0.0"
description = ""
authors = []
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.2"
tenacity = "^6.0.0"
uvicorn = "^0.15.0"
SQLAlchemy = "^2.0.21"
alembic = "^1.7.7"
lxml = "^6.1.0"
httpx = "^0.23.0"
Authlib = "^1.6.11"
itsdangerous = "^2.1.2"
cryptography = "^46.0.0"
ruff = "^0.4.2"
pydantic = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-testrail = "^2.9.0"
importlib-metadata = "^4.8.2"
playwright = "^1.22"
pytest-base-url = "^2.0.0"
pytest-mock = "^3.7.0"
python-dotenv = "^1.2.2"
requests = "^2.32.0"
pytest-asyncio = "^0.19.0"
pytest-cov = "^4.0.0"
vcrpy = "^4.2.1"
pypdf = "^6.7.5"
bs4 = "^0.0.1"
pytest-snapshot = "^0.9.0"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
